Fix leaderboard overflow

--- a/www/app.css
+++ b/www/app.css
@@ -313,6 +313,7 @@ label.control-label[for='score'] {
   flex-direction: column;
   align-items: flex-start;
   padding: 2vh 2vw;
+  overflow: auto;
 }
 
 .snappaneers-header {
